<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vitorjorge.movies.movies.fragments.RegisterFragment">


    <TextView
        android:paddingTop="@dimen/registerFragment_tv_PaddingTop"
        android:text="@string/tv_playerName_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_playerNameId" />

    <TextView
        android:text="@string/tv_playerAge_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_playerAgeId" />

    <TextView
        android:text="@string/tv_playerType_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_playerTypeId" />

    <TextView
        android:text="@string/tv_playerNacionality_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_playerNacionalityId" />

    <Button
        android:text="@string/btn_registerPlayer_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_registerPlayerId" />
    <Button
        android:text="@string/btn_excluir_register"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:id="@+id/buttonExluir" />

</LinearLayout>
