<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen_act"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vitorjorge.movies.movies.activities.LoginScreenACT">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginACT_ll_TopMagem"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/tv_users_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/textView"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:ems="10"
            android:id="@+id/edtUserNameId" />

        <TextView
            android:text="@string/tv_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/textView2"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:ems="10"
            android:id="@+id/edtPasswordId" />

        <Button
            android:text="@string/btn_login_login"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoginId" />

        <CheckBox
            android:text="@string/chk_keepingLoged_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chk_keepingLogedId" />
    </LinearLayout>
</RelativeLayout>
